Add additional server properties

--- a/resource/localization/en/zs-bandit-warfare_server-settings.properties
+++ b/resource/localization/en/zs-bandit-warfare_server-settings.properties
@@ -1,3 +1,7 @@
 
 zsb_round_limit=Round Limit
 zsb_wave_limit=Wave Limit
+zsb_round_gamemode=Round mode
+zsb_auto_roundmode_change=Allow automatic round mode change
+zsb_max_props_in_barricade=Maximum props in a single barricade
+zsb_nail_health_per_repair=Nail health repaired per hammer hit
