--- a/resource/localization/ko/zs-bandit-warfare_server-settings.properties
+++ b/resource/localization/ko/zs-bandit-warfare_server-settings.properties
@@ -1,3 +1,7 @@
 
 zsb_round_limit=총 라운드 수
 zsb_wave_limit=웨이브 수
+zsb_round_gamemode=라운드 모드
+zsb_auto_roundmode_change=맵 변경 후 자동 라운드 모드 변경
+zsb_max_props_in_barricade=바리케이드 당 최대 프롭 수
+zsb_nail_health_per_repair=못 1회 수리량
