--- a/resource/localization/ru/zs-bandit-warfare_server-settings.properties
+++ b/resource/localization/ru/zs-bandit-warfare_server-settings.properties
@@ -1,3 +1,7 @@
 
 zsb_round_limit=Лимит раундов
 zsb_wave_limit=Лимит волн
+zsb_round_gamemode=Режим раунда
+zsb_auto_roundmode_change=Разрешить автоматическое изменение режима раунда
+zsb_max_props_in_barricade=Макс. количество объектов в одной баррикаде
+zsb_nail_health_per_repair=Восст. здоровья гвоздя при каждом ударе молотком
