--- a/resource/localization/zh-CN/zs-bandit-warfare_server-settings.properties
+++ b/resource/localization/zh-CN/zs-bandit-warfare_server-settings.properties
@@ -1,3 +1,7 @@
 
 zsb_round_limit=回合上限
 zsb_wave_limit=波数上限
+zsb_round_gamemode=游戏模式
+zsb_auto_roundmode_change=允许自动更换游戏模式
+zsb_max_props_in_barricade=单个障碍物的最大物品上限
+zsb_nail_health_per_repair=每次敲击回复的钉子生命值
